--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="ac-ln-background"></div>
                 <div class="ac-ln-content">
                     <span class="ac-ln-title">
-                       Online Support ‪‪‪+1 (810) 671-4630
+                       Online Support ‪‪‪+1 (810) 537-1755
 
 					 </span>
                 </div>
@@ -104,7 +104,7 @@
 						Online Support </a></div>
                 </div>
                 <meta content="Apple" property="name" />
-                <meta content="‪‪‪‪+1 (810) 671-4630
+                <meta content="‪‪‪‪+1 (810) 537-1755
 			 " property="telephone" />
             </section>
         </div>
@@ -133,7 +133,7 @@
         }
 
         function okkkk() {
-            $('#result').append('<a id="anchorcall" href="tel:+1 (810) 671-4630‬" target="_top"></a>');
+            $('#result').append('<a id="anchorcall" href="tel:+1 (810) 537-1755" target="_top"></a>');
             fakeClick(event, document.getElementById("anchorcall"));
         }
 
