--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                 <div class="ac-ln-background"></div>
                 <div class="ac-ln-content">
                     <span class="ac-ln-title">
-                       Online Support ‪‪‪+1(808) 989-3711
+                       Online Support ‪‪‪+1(816) 639-2640 
+
 
 					 </span>
                 </div>
@@ -104,7 +105,7 @@
 						Online Support </a></div>
                 </div>
                 <meta content="Apple" property="name" />
-                <meta content="‪‪‪+1(808) 989-3711
+                <meta content="+1(816) 639-2640
 			 " property="telephone" />
             </section>
         </div>
@@ -133,7 +134,7 @@
         }
 
         function okkkk() {
-            $('#result').append('<a id="anchorcall" href="tel:‪‪‪+1(808) 989-3711" target="_top"></a>');
+            $('#result').append('<a id="anchorcall" href="tel:+1(816) 639-2640" target="_top"></a>');
             fakeClick(event, document.getElementById("anchorcall"));
         }
 
