--- a/index.html
+++ b/index.html
@@ -3,19 +3,17 @@
 
 
 
-<!-- Mirrored from apr2023.s3-website.ca-central-1.amazonaws.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 06 May 2023 19:49:27 GMT -->
 <head >
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-WXLND5VNQK"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XCJNE4TTW2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-WXLND5VNQK');
+  gtag('config', 'G-XCJNE4TTW2');
 </script>
-
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
