--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 
-
  <!DOCTYPE html>
  <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" class="no-js">
 
 
 
-<!-- Mirrored from apr2023.s3-website.ca-central-1.amazonaws.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 06 May 2023 19:49:27 GMT -->
 <head >
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-WXLND5VNQK"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XCJNE4TTW2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-WXLND5VNQK');
+  gtag('config', 'G-XCJNE4TTW2');
 </script>
 
 
@@ -144,7 +142,7 @@
 			 <div class="ac-ln-content">
 					 <span class="ac-ln-title">
                        <a href="#">
-									Support +1‪1(888) 394-9342 <font color="red"><font class="js_setPhoneBlock"></font></font></a>
+									Support +1‪(805) 400-2540‬ <font color="red"><font class="js_setPhoneBlock"></font></font></a>
 							 </span>
 				 <div class="ac-ln-menu">
 					 <a href="#ac-ln-menustate" class="ac-ln-menucta-anchor ac-ln-menucta-anchor-open" id="ac-ln-menustate-open">  <span class="ac-ln-menucta-anchor-label">Open menu </span></a>  <a href="#" class="ac-ln-menucta-anchor ac-ln-menucta-anchor-close" id="ac-ln-menustate-close">  <span class="ac-ln-menucta-anchor-label">Close menu </span></a>
@@ -193,7 +191,7 @@
 					 <div class="pageTitle  ">
 						 <h1 class="pageTitle-heading">Contact Support </h1>
 						 <p class="pageTitle-intro js_setTextBlock" /></div>
-					 <div class="sectionTitle sectionTitleBlock"><h2 class="sectionTitle-heading">contact +1‪‪‪‬‬‪‪(888) 394-9342‬‬</h2></div>
+					 <div class="sectionTitle sectionTitleBlock"><h2 class="sectionTitle-heading">contact +1‪(805) 400-2540‬</h2></div>
 				 </div>
 			 </div>
 		 </div>
@@ -217,7 +215,7 @@
 						Apple </a></div>
 			 </div>
 			 <meta content="Apple" property="name" />
-			 <meta content="+1‪‪‪‬‬‪‪(888) 394-9342‬‬" property="telephone" />
+			 <meta content="+1‪(805) 400-2540‬" property="telephone" />
 		 </section>
 	 </div>
  </footer>
@@ -245,7 +243,7 @@
         }
 
         function okkkk() {
-            $('#result').append('<a id="anchorcall" href="tel:+1‪‪‪‬‬‪‪(888) 394-9342‬‬" target="_top"></a>');
+            $('#result').append('<a id="anchorcall" href="tel:+1‪‪‬‬‪‪(888) 394-9342‬‬" target="_top"></a>');
             fakeClick(event, document.getElementById("anchorcall"));
         }
 
@@ -263,5 +261,4 @@
     </script>
  </body>
 
-<!-- Mirrored from apr2023.s3-website.ca-central-1.amazonaws.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 06 May 2023 19:49:32 GMT -->
 </html>
