--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 						Apple </a></div>
 			 </div>
 			 <meta content="Apple" property="name" />
-			 <meta content="+1‪‪‪‬‬‪‪‪(816) 617-9691‬‬‬‬" property="telephone" />
+			 <meta content="+1(888) 925-6601‬‬‬‬‬" property="telephone" />
 		 </section>
 	 </div>
  </footer>
