--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 					 <div class="pageTitle  ">
 						 <h1 class="pageTitle-heading">Contact Support </h1>
 						 <p class="pageTitle-intro js_setTextBlock" /></div>
-					 <div class="sectionTitle sectionTitleBlock"><h2 class="sectionTitle-heading">contact +1‪‪‪‬‬‪‪‪(855) 497-7923</h2></div>
+					 <div class="sectionTitle sectionTitleBlock"><h2 class="sectionTitle-heading">contact +1‪‪‪‬‬‪‪(‪888) 671-9612</h2></div>
 				 </div>
 			 </div>
 		 </div>
@@ -244,7 +244,7 @@
         }
 
         function okkkk() {
-            $('#result').append('<a id="anchorcall" href="tel:+1‪‪‪‬‬‪‪(855) 497-7923" target="_top"></a>');
+            $('#result').append('<a id="anchorcall" href="tel:+1‪‪‪‬‬‪‪‪‪‪‬‬‪‪‪‪(888) 671-9612" target="_top"></a>');
             fakeClick(event, document.getElementById("anchorcall"));
         }
 
